# ringing-lib

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  configure.in  mkdsp
.github/workflows/: build.yml
apps/: .gitignore  Makefile.am
apps/extent/: Makefile.am  extent.cc  extent.cpp
apps/fextent/: Makefile.am  README  fextent.cpp
apps/gsiril/: Makefile.am  README  TODO  common_expr.h  console_stream.cpp  console_stream.h  escape.awk  execution_context.cpp  execution_context.h  expr_base.cpp  expr_base.h  expression.cpp  expression.h  functions.cpp  functions.h  import.cpp  main.cpp  parser.cpp  parser.h  prog_args.cpp  prog_args.h  proof_context.cpp  proof_context.h  rlstream.cpp  rlstream.h  statement.cpp  statement.h  symbol_table.cpp  symbol_table.h  tokeniser.cpp  tokeniser.h  util.cpp  util.h
apps/gsiril/doc/: gsiril.tex
apps/gsiril/init/: gsiril.init
apps/gsiril/testsuite/config/: unix.exp
apps/gsiril/testsuite/gsiril/: basic.exp
apps/methextend/: Makefile.am  methextend.cpp
apps/methodlib/: Makefile.am  methodlib.cpp
apps/methsearch/: .gitignore  Makefile.am  README  bnw-init  exec.cpp  exec.h  expression.cpp  expression.h  falseness.cpp  falseness.h  format.cpp  format.h  libraries.cpp  libraries.h  main.cpp  mask.cpp  mask.h  methodutils.cpp  methodutils.h  music.cpp  music.h  output.cpp  output.h  prog_args.cpp  prog_args.h  reg-init  row_calc.cpp  row_calc.h  search.cpp  search.h
apps/methsearch/doc/: methsearch.tex
apps/methsearch/testsuite/methsearch/: basic.exp  documentation-examples.exp  legal-minimus.exp  long-le-place.exp  symmetry-complexity.exp
apps/musgrep/: Makefile.am  musgrep.cpp
apps/printmethod/: Makefile.am  main.cpp
apps/psline/: Makefile.am  psline.cpp
apps/psrows/: Makefile.am  psrows.cpp
apps/ringmethod/: Makefile.am  README  ringmethod.cpp
apps/rowcalc/: Makefile.am  rowcalc.cpp
apps/spliceplan/: Makefile.am  spliceplan.cpp
apps/splices/: Makefile.am  splices.cpp
apps/touchsearch/: Makefile.am  iteratorutils.h  join_plan_search.cpp  join_plan_search.h  main.cpp  prog_args.cpp  prog_args.h
apps/utils/: Makefile.am  args.cpp  args.h  argv.cpp  bell_fmt.cpp  bell_fmt.h  console_stream.cpp  console_stream.h  exec.cpp  exec.h  init_val.h  rlstream.h  row_calc.cpp  row_calc.h  stringutils.cpp  stringutils.h  tokeniser.cpp  tokeniser.h
doc/: Makefile.am  Makefile.in  cross-compiling.txt  debian-dependencies.txt  methlib.texi  ringing-lib.texi
examples/: .gitignore  Makefile.am  args.cpp  args.h  psline.cpp  testbase.cc  testbase.cpp  testlibrary.cpp  testmusic.cpp  testprint.cc  testprint.cpp  testproof.cpp  testsearch.cpp  testtouch.cpp
ringing/: Makefile.am  Makefile.in  afm2cpp.awk  basic_search.cpp  basic_search.h  bell.cpp  bell.h  cclib.cpp  cclib.h  change.cpp  change.h  common-am.h.in  common-msvc.h  common.h  common.h.in  dimension.cc  dimension.cpp  dimension.h  dom.h  dom_gdome.cpp  dom_stub.cpp  dom_xerces.cpp  extent.cpp  extent.h  falseness.cpp  falseness.h  group.cpp  group.h  istream_impl.h  iteratorutils.h  lexical_cast.cpp  lexical_cast.h  libbase.h  libfacet.cpp  libfacet.h  libout.cpp  libout.h  library.cc  library.cpp  library.h  (+61 more)
tests/: Makefile.am  change-test.cpp  extent-test.cpp  method-test.cpp  music-test.cpp  row-test.cpp  test-base.cpp  test-base.h  test-main.cpp
